
[package]
name = "solana-vote-program"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Stefan Pantic"]
repository = "https://github.com/stefan93/solana-vote-program"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.8.14"
borsh-size = { path = "../../../borsh-size-rs/borsh_size" }
thiserror = "1.0"
num_enum = "0.5.4"
num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
solana-program-test = "~1.8.16"
solana-sdk = "~1.8.16"

[lib]
name = "token_program"
crate-type = ["cdylib", "lib"]
